# beszel-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  REWRITE_SUMMARY.md  pyproject.toml  setup.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  MIGRATION.md  QUICKSTART.md  QUICK_REFERENCE.md  RUNNING_METHODS.md  TROUBLESHOOTING.md  UV_GUIDE.md  UV_QUICKSTART.md  WHY_FASTMCP.md
examples/: README.md  config-uv.json  config-uvx.json  config.json  queries.md
src/beszel_mcp/: __init__.py  __main__.py  pocketbase_client.py  server.py
tests/: __init__.py  test_client.py
